# main_board_sw

./: .gitmodules  CMakeLists.txt  main.cpp
inc/: config.h  eth.h  notify.h  packet.h
lib/: CMakeLists.txt
port/: CMakeLists.txt
port/freertos/: FreeRTOSConfig.h
port/ioLibrary_Driver/inc/: w5x00_gpio_irq.h  w5x00_spi.h  wiznet_spi.h
port/ioLibrary_Driver/src/: w5x00_gpio_irq.c  w5x00_spi.c
port/timer/: timer.c  timer.h
src/: CMakeLists.txt  eth.cpp  main.cpp  notify.cpp
